--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-local": "^1.0.0",
     "pdfkit": "^0.13.0",
     "pdfkit-table": "^0.1.99",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "sweetalert": "^2.1.2"
   }
 }
