--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -19,6 +21,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "mocha": "^10.2.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "node": "^19.6.1",
@@ -28,7 +31,6 @@
     "passport-local": "^1.0.0",
     "pdfkit": "^0.13.0",
     "pdfkit-table": "^0.1.99",
-    "router": "^1.3.8",
-    "sweetalert": "^2.1.2"
+    "router": "^1.3.8"
   }
 }
